@@ -56,7 +56,7 @@
         "comment": ""
     },
     "window_config_storageThreshold_label": {
-        "string": "Storage threshold (in %):",
+        "string": "Storage threshold (in GiB):",
         "comment": ""
     },
     "window_config_currentLoc_label": {
@@ -320,7 +320,7 @@
         "comment": ""
     },
     "msg_spaceBelowThreshold": {
-        "string": "Free disc space is below {0}%",
+        "string": "Free disc space is below {0}",
         "comment": "0: Storage threshold"
     },
     "msg_relCheckError": {
